--- a/website/blog/2021-01-17-version-1.4.md
+++ b/website/blog/2021-01-17-version-1.4.md
@@ -1,5 +1,5 @@
 ---
-title: Latest Version 1.4
+title: Version 1.4
 author: Roy Hayek
 # authorURL: http://twitter.com/
 # authorFBID: 100002976521003
